setup-cd/argocd-wf-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
    - host: argocd.18.188.218.144.nip.io
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /
            pathType: Prefix
